<resources>
    <string name="app_name">UniPlanner</string>

    <!-- @String - activity_main -->
    <string name="title_activity_main">@string/app_name</string>
    <string name="btn_activity_main">Start</string>
    <string name="txt1_activity_main">Do your activities</string>
    <string name="txt2_activity_main">Easy and Tidy</string>
    <string name="txt3_activity_main">Ready to add productive activities and have a beautiful day</string>
    <string name="txt4_activity_main">Support \u2B50 the project on GitHub \u2764</string>

    <!-- @String - activity_login -->
    <string name="title_bar_activity_login">Back</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_email_field_activity_login">Email</string>
    <string name="hint_txt_email_field_activity_login">example@gmail.com</string>
    <string name="title_password_field_activity_login">Password</string>
    <string name="hint_txt_password_field_activity_login">Enter your password</string>
    <string name="btn_toAccess_activity_login">To access</string>

    <!-- @string - activity_register -->
    <string name="title_bar_activity_register">Back</string>
    <string name="title_activity_register">Register user</string>
    <string name="title_name_field_activity_register">Name</string>
    <string name="hint_txt_name_field_activity_register">Enter your name</string>
    <string name="title_spinner_gender_activity_register">Gender</string>
    <string-array name="array_options_spinner_gender">
        <item>Select a option</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_email_field_activity_register">Email</string>
    <string name="hint_txt_email_field_activity_register">Enter your email</string>
    <string name="title_password_field_activity_register">Password</string>
    <string name="hint_txt_password_field_activity_register">Enter a password</string>
    <string name="title_conf_password_field_activity_register">Confirm password</string>
    <string name="hint_txt_conf_password_field_activity_register">*******</string>
    <string name="btn_register_activity_register">Register</string>
    <string name="txt_error_name">Please enter your name</string>
    <string name="txt_error_gender">Please select a gender</string>
    <string name="txt_error_email">Please enter your email</string>
    <string name="txt_error_password">Please enter a password</string>
    <string name="txt_error_conf_password">Incorrect password</string>
    <string name="toast_user_registered">Successful registration</string>
    <string name="toast_user_not_exist">USER NOT EXIST</string>
    <string name="toast_welcome_user">Welcome back</string>

    <!-- @string - menu_custom_toolbar -->
    <string name="menu_1_go_to">Go to</string>
    <string name="submenu_0_go_to_main_activity">Main Activity</string>
    <string name="submenu_1_go_to_start_activity">Start Activity</string>
    <string name="submenu_2_go_to_login_activity">Login Activity</string>
    <string name="submenu_3_go_to_register_activity">Register Activity</string>
    <string name="submenu_4_go_to_webview_activity">WebView Activity</string>
    <string name="submenu_5_go_to_mynotes_activity">MyNotes Activity</string>
    <string name="menu_2_about">About</string>

    <!-- @strin - menu_toolbar_mynotes -->
    <string name="menu_1_mynotes_profile">Profile</string>
    <string name="menu_2_mynotes_about">About</string>
    <string name="menu_3_mynotes_logout">Logout</string>

    <!-- @String - activity_webview -->
    <string name="title_bar_webview">Project UniPlanner</string>

    <!-- @String - activity_start -->
    <string name="title_text_info_activity_start">To give you a better experience in our application. Please login to your account or register. You can also use the app without using an account.</string>
    <string name="txt_continue_activity_start">Continue without registration \u270C</string>
    <string name="btn_login_activity_start">Login</string>
    <string name="btn_register_activity_start">Register</string>

    <!-- @String - activity_my_notes -->
    <string name="title_bar_activity_my_notes">Back</string>
    <string name="txt_activity_notes">My notes</string>
    <string name="speakable_text_floating_button_add_note">Add a Note</string>

    <!-- @string - activity_note -->
    <string name="btn_cancel_activity_note">Cancel</string>
    <string name="btn_save_activity_note">Save</string>
    <string name="hint_txt_note_title">Add a title</string>
    <string name="hint_txt_note_description">Add a content for the note …</string>
    <string name="txt_error_title_note">Please enter a title for the note</string>
    <string name="txt_error_content_note">Please enter a content for the note</string>
    
    <!-- @String - activity_profile -->
    <string name="title_activity_profile">My personal information</string>
    <string name="title_nickname_field_activity_profile">Nickname</string>
    <string name="title_name_field_activity_profile">Name</string>
    <string name="title_email_field_activity_profile">Email</string>
    <string name="title_password_field_activity_profile">Password</string>
    <string name="btn_edit_activity_profile">Edit Profile</string>
    <string name="title_gender_activity_profile">Gender</string>
    <string name="btn_save_activity_profile">Save</string>
</resources>