<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar_LoginActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_dark_inversePrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_custom_toolbar"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/title_bar_activity_login" />

        <ImageView
            android:id="@+id/img_activity_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_activity_login"
            app:srcCompat="@drawable/baseline_account_circle_24" />

        <TextView
            android:id="@+id/title_activity_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/title_activity_login"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topAppBar_LoginActivity" />

        <TextView
            android:id="@+id/title_email_field_activity_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title_email_field_activity_login"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/img_activity_login" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="26dp" />

        <EditText
            android:id="@+id/txt_email_field_login_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:ems="10"
            android:hint="@string/hint_txt_email_field_activity_login"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_email_field_activity_login"
            app:layout_constraintTop_toBottomOf="@+id/title_email_field_activity_login" />

        <TextView
            android:id="@+id/title_password_field_activity_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/title_password_field_activity_login"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/title_email_field_activity_login"
            app:layout_constraintTop_toBottomOf="@+id/txt_email_field_login_activity" />

        <EditText
            android:id="@+id/txt_password_field_login_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hint_txt_password_field_activity_login"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/txt_email_field_login_activity"
            app:layout_constraintStart_toStartOf="@+id/txt_email_field_login_activity"
            app:layout_constraintTop_toBottomOf="@+id/title_password_field_activity_login" />

        <Button
            android:id="@+id/btn_toAccess_activity_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="60dp"
            android:onClick="iniciar"
            android:text="@string/btn_toAccess_activity_login"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/txt_password_field_login_activity" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
